# pn532

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg  setup.py
src/pn532/: __init__.py  i2c.py  pn532.py  spi.py  uart.py
src/pn532/example/: __init__.py  uid.py
src/pn532/example/gpio/: read.py  write.py
src/pn532/example/mifare/: dump.py  rw.py
src/pn532/example/ntag2/: dump.py  rw.py
src/pn532/example/uart/: hex.py
