[aliases]
test = pytest

[bdist_wheel]
universal = 1

[console_sripts]
pn532.mifare.dump = pn532.example.mifare.dump:main
pn532.ntag2.dump = pn532.example.ntag2.dump:main
pn532.mifare.rw = pn532.example.mifare.rw:main
pn532.ntag2.rw = pn532.example.ntag2.rw:main
pn532.get.uid = pn532.example.uid:main
pn532.gpio.read = pn532.example.gpio.read:main
pn532.gpio.write = pn532.example_gpio.write:main
pn532.uart.hex = pn532.example.uart.hex.main

[flake8]
max-complexity = 10
max-line-length = 79
ignore = C812,C815,C816,C819,D202,D401,E203,W503

[matrix]
python_versions =
    3.7
coverage_flags =
    cover: true
    nocover: false

[metadata]
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities",
description = PN532 NFC reader
long_description = file: readme.md
long_descritpion_content_type = text/markdown
name = pn532
project_urls =
    Issue Tracker = https://github.com/jlubken/pn532/issues
url = https://github.com/jlubken/pn532

[mypy]
follow_imports = normal
ignore_missing_imports = True

[options]
tests_require = pytest
zip_safe = false
