[aliases]
test = pytest

[bdist_wheel]
universal = 1

[flake8]
max-complexity = 10
max-line-length = 79
ignore = C812,C815,C816,C819,D202,D401,E203,W503

[matrix]
python_versions =
    3.7 3.8 3.9
coverage_flags =
    cover: true
    nocover: false

[metadata]
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities",
description = PN532 NFC reader
long_description = file: readme.md
long_descritpion_content_type = text/markdown
name = pn532
project_urls =
    Issue Tracker = https://github.com/jlubken/pn532/issues
url = https://github.com/jlubken/pn532

[mypy]
follow_imports = normal
ignore_missing_imports = True

[options]
tests_require = pytest
zip_safe = false
